Try to avoid tooltips that are too wide

--- a/public/index.css
+++ b/public/index.css
@@ -119,7 +119,8 @@ body {
   display: none;
   font-size: 10px;
   padding: 3px;
-  position: absolute; }
+  position: absolute;
+  max-width: 250px; }
   .ta-visualization-tooltip.visible {
     display: block; }
   .ta-visualization-tooltip.tooltip-country .country-name {
