--- a/public/ta-visualizations.css
+++ b/public/ta-visualizations.css
@@ -121,7 +121,8 @@
   display: none;
   font-size: 10px;
   padding: 3px;
-  position: absolute; }
+  position: absolute;
+  max-width: 250px; }
   .ta-visualization-tooltip.visible {
     display: block; }
   .ta-visualization-tooltip.tooltip-country .country-name {
