--- a/src/styles/_tooltip.scss
+++ b/src/styles/_tooltip.scss
@@ -5,6 +5,7 @@
   font-size: 10px;
   padding: 3px;
   position: absolute;
+  max-width: 250px;
 
   &.visible {
     display: block;
